<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vault</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="tips_enter_pin">Enter PIN</string>
    <string name="tips_pin_wrong">Wrong PIN</string>
    <string name="tips_pin_no_match">Pins do not match</string>
    <string name="tips_pin_confirm">Confirm your pin</string>
    <string name="tips_pin_choose">Choose your pin</string>
</resources>
